test/classes/initializers/siblingCall/forallSiblingCall.good
forallSiblingCall.chpl:4: In initializer:
forallSiblingCall.chpl:6: error: use of this.init() call in a forall loop body
